<?xml version="1.0"?>
<package format="2">
  <name>mpc_simple</name>
  <version>0.0.0</version>
  <description>Use MPC to navigate IPOPT</description>

  <maintainer email="suraj@todo.todo">suraj</maintainer>


  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/mpc_simple</url> -->


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->

  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->

  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ipopt</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>ipopt</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <!--<exec_depend>ipopt</exec_depend>-->
  <exec_depend>turtlesim</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
