<?xml version="1.0"?>
<package format="2">
    <name>mpc_simple</name>
    <version>0.0.1</version>
    <description>Use MPC to navigate IPOPT</description>

    <maintainer email="suraj@todo.todo">suraj</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>turtlesim</depend>
    <depend>ipopt</depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cppad</build_depend>

    <export>
    </export>
</package>
